--- a/miniprogram/pages/flashDetermination/index.wxss
+++ b/miniprogram/pages/flashDetermination/index.wxss
@@ -113,9 +113,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.y-image {
+  width: 70%;
+  height: 80%;
+  position: absolute;
+  left: 15%;
+  top: 10%;
+  /* transform-origin: 50% 50%; */
 }
 .y-info {
   text-align: center;
   margin-top: 20px;
 }
+
 /* 摇一摇end */
