--- a/miniprogram/pages/login/index.wxml
+++ b/miniprogram/pages/login/index.wxml
@@ -1,11 +1,10 @@
 <view>
   <view class='headView'>
-    <view wx:if="{{!isAuth}}" class='headImageView'>
+    <view class='headImageView'>
       <image class='headImage' src='{{avatarUrl}}' mode='scaleToFill'></image>
     </view>
-    <view wx:if="{{!isAuth}}" class='titleText'>申请获取以下权限</view>
-    <view wx:if="{{!isAuth}}" class='contentText'>获得你的公开信息(昵称,头像,手机,位置等)</view>
-    <button wx:if="{{!isAuth}}" class='authBtn' type='primary' open-type='getUserInfo' bindgetuserinfo='bindGetUserInfo'>授权</button>
-    <button wx:if="{{isAuth}}" class='authBtn' type='primary' open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">登录</button>
+    <view class='titleText'>申请获取以下权限</view>
+    <view class='contentText'>获得你的公开信息(昵称,头像,手机,位置等)</view>
+    <button class='authBtn' type='primary' open-type='getUserInfo' bindgetuserinfo='bindGetUserInfo'>授权登录</button>
   </view>
 </view>
