--- a/miniprogram/pages/me/myMeets/index.wxss
+++ b/miniprogram/pages/me/myMeets/index.wxss
@@ -23,6 +23,7 @@
   border: 1px solid #d8d8d8;
   /* padding: 10px; */
   border-radius: 3px;
+  margin-bottom: 10px;
 }
 .item-top {
   display: flex;
