--- a/miniprogram/pages/sign/signDetails/index.wxss
+++ b/miniprogram/pages/sign/signDetails/index.wxss
@@ -50,6 +50,10 @@
   border: 1px solid #d8d8d8;
   border-radius: 3px;
 }
+.image {
+  width: 46px;
+  height: 46px;
+}
 .info {
   flex: 1;
   padding: 0 10px;
