--- a/miniprogram/pages/seize/seizeSuccess/index.wxml
+++ b/miniprogram/pages/seize/seizeSuccess/index.wxml
@@ -2,7 +2,7 @@
 <view class="container">
   <view class="notice-wrap">
     <view class="notice-title">恭喜你！</view>
-    <view class="notice-content">抢占成功，您的会议室截止使用时间为2021-07-09 17:00</view>
+    <view class="notice-content">抢占成功，您的会议室截止使用时间为{{end_time}}</view>
     <view class="notice-title">抓紧开会吧！</view>
   </view>
 
