--- a/miniprogram/pages/flashDetermination/index.wxss
+++ b/miniprogram/pages/flashDetermination/index.wxss
@@ -42,7 +42,6 @@
   justify-content: flex-start;
   align-items: center;
   background: #fff;
-  padding-left: 20px;
   font-weight: bold;
 }
 .w-form-item {
@@ -117,13 +116,23 @@
   position: relative;
 }
 .y-image {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-top: -100px;
-  margin-left: -100px;
+  margin-top: -90px;
+  margin-left: -90px;
+  /* transform-origin: 50% 50%; */
+}
+.y-image-yuyin {
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -80px;
+  margin-left: -80px;
   /* transform-origin: 50% 50%; */
 }
 .y-info {
