修改抢占扫码功能

--- a/miniprogram/pages/me/index.wxml
+++ b/miniprogram/pages/me/index.wxml
@@ -2,7 +2,7 @@
 <view class="container">
 
   <!-- 用户 openid -->
-  <view class="userinfo">
+  <view class="userinfo" style="margin-bottom: 10px;">
     <block>
       <image bindtap="bindViewTap" class="userinfo-block-avatar" src="{{avatarUrl}}" mode="cover"></image>
     </block>
