--- a/miniprogram/pages/me/index.wxss
+++ b/miniprogram/pages/me/index.wxss
@@ -13,17 +13,18 @@ page {
 }
 
 .userinfo, .uploader, .tunnel {
-  margin-top: 40rpx;
+  /* margin-top: 20rpx; */
   height: 140rpx;
   width: 100%;
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
   border-left: none;
   border-right: none;
   display: flex;
   flex-direction: row;
   align-items: center;
   transition: all 300ms ease;
+  margin-top: 0;
 }
 
 .userinfo {
@@ -33,7 +34,7 @@ page {
 .userinfo-avatar {
   width: 100rpx;
   height: 100rpx;
-  margin: 20rpx;
+  /* margin: 20rpx; */
   border-radius: 50%;
   background-size: cover;
   background-color: white;
@@ -109,7 +110,7 @@ page {
   align-content: center;
   justify-content: center;
   box-sizing: border-box;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  /* border-top: 1px solid rgba(0, 0, 0, 0.1); */
 }
 
 .uploader-image {
@@ -129,7 +130,7 @@ page {
   align-content: center;
   justify-content: space-between;
   box-sizing: border-box;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  /* border-top: 1px solid rgba(0, 0, 0, 0.1); */
 }
 
 .tunnel-text:first-child {
