--- a/miniprogram/pages/seize/index.wxss
+++ b/miniprogram/pages/seize/index.wxss
@@ -1,35 +1,40 @@
+/**index.wxss**/
 .container {
   width: 100%;
   background: #F8F9FD;
-  height: 100vh;
+  padding: 10px 0;
 }
-.y-wrap {
-  width: 80%;
-  padding: 50px 10px;
-}
-.y-pic {
+.w-form-item {
   width: 100%;
-  height: 240px;
-  /* border: 1px solid #d8d8d8; */
-  border-radius: 3px;
-  text-align: center;
+  height: 50px;
+  line-height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  text-align: right;
+  /* border-bottom: 1px solid #d9d9d9; */
+  background: #fff;
+  /* margin: 10px 0; */
+  /* padding: 0 20px; */
 }
-.y-image {
-  width: 160px;
-  height: 160px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-top: -80px;
-  margin-left: -80px;
-  /* transform-origin: 50% 50%; */
+.weui-input {
+  text-align: right;
 }
-.y-info {
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+.w-form-label {
+  width: 110px;
+}
+.w-form-content {
+  flex: 1;
+  padding: 0;
+  text-align: left;
+  padding: 0 20px 0 30px;
+}
+
+/* 按钮 */
+.btn-group {
+  width: 100%;
+  padding: 80rpx 0;
+}
+.btn-wrap {
+  padding: 0 30rpx;
 }
