--- a/miniprogram/pages/seize/toSeize/index.wxss
+++ b/miniprogram/pages/seize/toSeize/index.wxss
@@ -1,40 +1,35 @@
-/**index.wxss**/
 .container {
   width: 100%;
   background: #F8F9FD;
-  padding: 10px 0;
+  height: 100vh;
 }
-.w-form-item {
+.y-wrap {
+  width: 80%;
+  padding: 50px 10px;
+}
+.y-pic {
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: 240px;
+  /* border: 1px solid #d8d8d8; */
+  border-radius: 3px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: right;
-  /* border-bottom: 1px solid #d9d9d9; */
-  background: #fff;
-  /* margin: 10px 0; */
-  /* padding: 0 20px; */
+  position: relative;
 }
-.weui-input {
-  text-align: right;
+.y-image {
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -80px;
+  margin-left: -80px;
+  /* transform-origin: 50% 50%; */
 }
-.w-form-label {
-  width: 110px;
-}
-.w-form-content {
-  flex: 1;
-  padding: 0;
-  text-align: left;
-  padding: 0 20px 0 30px;
-}
-
-/* 按钮 */
-.btn-group {
-  width: 100%;
-  padding: 80rpx 0;
-}
-.btn-wrap {
-  padding: 0 30rpx;
+.y-info {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
